Create first carousel button

--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
     <!-- container-fluid does not create gutters; it takes up the entire width of the page-->
 <div class="<div class="container-fluid">
     <div class="carousel slide" id="carouselHeader">
+<div class="carousel-indicators">
+<button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Farm Fresh Produce"></button>
 
 
-    </div>
+
+</div>
+</div>
 </div>"
 
 
