--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <!-- container-fluid does not create gutters; it takes up the entire width of the page-->
-<div class="<div class="container-fluid">
-    <div class="carousel slide" id="carouselHeader">
+<div class="container-fluid">
+<div class="carousel slide" id="carouselHeader">
 <div class="carousel-indicators">
 <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Farm Fresh Produce"></button>
 
@@ -20,7 +20,7 @@
 
 </div>
 </div>
-</div>"
+</div>
 
 
 
