--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
     <div class="container-fluid">
         <div class="carousel slide" id="carouselHeader">
             <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Farm Fresh Produce"></button>
-
-
-
+                <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="0" class="active"aria-current="true" aria-label="Farm Fresh Produce"></button>
+                <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="1" aria-current="true" aria-label="Free delivery"></button>
+                <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="2" aria-current="true" aria-label="Shop with our app"></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/FarmFresh.png" class="d-block w-100" alt="From our farm to your table">
+                </div>
+              </div>
             </div>
         </div>
     </div>
