--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
                 <div class="carousel-item active">
                     <img src="img/FarmFresh.png" class="d-block w-100" alt="From our farm to your table">
                 </div>
+              <div class="carousel-inner">
+                <div class="carousel-item">
+                    <img src="img/FreeDelivery.png" class="d-block w-100" alt="Free delivery with any plan">
+                </div>
+              <div class="carousel-inner">
+                <div class="carousel-item">
+                    <img src="img/FreshApp.png" class="d-block w-100" alt="Shop with our app">
+                </div>
               </div>
             </div>
         </div>
