--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- container-fluid does not create gutters; it takes up the entire width of the page-->
     <div class="container-fluid">
-        <div class="carousel slide" id="carouselHeader">
+        <div class="carousel slide" id="carouselHeader" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="0" class="active"aria-current="true" aria-label="Farm Fresh Produce"></button>
                 <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="1" aria-current="true" aria-label="Free delivery"></button>
