--- a/index.html
+++ b/index.html
@@ -17,34 +17,45 @@
     <div class="container-fluid">
         <div class="carousel slide" id="carouselHeader" data-bs-ride="carousel">
             <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="0" class="active"aria-current="true" aria-label="Farm Fresh Produce"></button>
-                <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="1" aria-current="true" aria-label="Free delivery"></button>
-                <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="2" aria-current="true" aria-label="Shop with our app"></button>
-              </div>
-              <div class="carousel-inner">
+                <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Farm Fresh Produce"></button>
+                <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="1" aria-current="true"
+                    aria-label="Free delivery"></button>
+                <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="2" aria-current="true"
+                    aria-label="Shop with our app"></button>
+            </div>
+            <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="img/FarmFresh.png" class="d-block w-100" alt="From our farm to your table">
                 </div>
-              <div class="carousel-inner">
-                <div class="carousel-item">
-                    <img src="img/FreeDelivery.png" class="d-block w-100" alt="Free delivery with any plan">
+                <div class="carousel-inner">
+                    <div class="carousel-item">
+                        <img src="img/FreeDelivery.png" class="d-block w-100" alt="Free delivery with any plan">
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item">
+                            <img src="img/FreshApp.png" class="d-block w-100" alt="Shop with our app">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselHeader" data-bs-slide="prev"> 
+                        <span class="carosel-control-prev-icon"></span>
+                        <span class="bisually-hidden"> Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselHeader" data-bs-slide="next"> 
+                        <span class="carosel-control-next-icon"></span>
+                        <span class="bisually-hidden"> Next</span>
+                    </button>
                 </div>
-              <div class="carousel-inner">
-                <div class="carousel-item">
-                    <img src="img/FreshApp.png" class="d-block w-100" alt="Shop with our app">
-                </div>
-              </div>
             </div>
         </div>
-    </div>
 
 
 
 
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
-    </script>
+        <!-- JavaScript Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
