--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselHeader" data-bs-slide="prev"> 
                         <span class="carosel-control-prev-icon"></span>
-                        <span class="bisually-hidden"> Previous</span>
+                        <span class="visually-hidden"> Previous</span>
                     </button>
                     <button class="carousel-control-next" type="button" data-bs-target="#carouselHeader" data-bs-slide="next"> 
                         <span class="carosel-control-next-icon"></span>
-                        <span class="bisually-hidden"> Next</span>
+                        <span class="visually-hidden"> Next</span>
                     </button>
                 </div>
             </div>
