--- a/index.html
+++ b/index.html
@@ -38,14 +38,18 @@
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselHeader" data-bs-slide="prev"> 
-                        <span class="carosel-control-prev-icon"></span>
+                        <span class="carousel-control-prev-icon"></span>
                         <span class="visually-hidden"> Previous</span>
                     </button>
                     <button class="carousel-control-next" type="button" data-bs-target="#carouselHeader" data-bs-slide="next"> 
-                        <span class="carosel-control-next-icon"></span>
+                        <span class="carousel-control-next-icon"></span>
                         <span class="visually-hidden"> Next</span>
                     </button>
                 </div>
+<div class="container pt-5"></div>
+
+
+
             </div>
         </div>
 
