Begin building first card

--- a/index.html
+++ b/index.html
@@ -47,7 +47,13 @@
                     </button>
                 </div>
 <div class="container pt-5"></div>
-
+<div class="row">
+    <div class="col">
+        <div class="card">
+                <img src="img/indplan.png" class="card-img-top" alt="Individual plan">
+        </div>
+    </div>
+</div>
 
 
             </div>
