first card complete

--- a/index.html
+++ b/index.html
@@ -37,23 +37,33 @@
                             <img src="img/FreshApp.png" class="d-block w-100" alt="Shop with our app">
                         </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselHeader" data-bs-slide="prev"> 
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselHeader"
+                        data-bs-slide="prev">
                         <span class="carousel-control-prev-icon"></span>
                         <span class="visually-hidden"> Previous</span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselHeader" data-bs-slide="next"> 
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselHeader"
+                        data-bs-slide="next">
                         <span class="carousel-control-next-icon"></span>
                         <span class="visually-hidden"> Next</span>
                     </button>
                 </div>
-<div class="container pt-5"></div>
-<div class="row">
-    <div class="col">
-        <div class="card">
-                <img src="img/indplan.png" class="card-img-top" alt="Individual plan">
-        </div>
-    </div>
-</div>
+                <div class="container pt-5"></div>
+                <div class="row">
+                    <div class="col">
+                        <div class="card">
+                            <img src="img/indplan.png" class="card-img-top" alt="Individual plan">
+                            <div class="card-body">
+                                <h5 class="card-title">Individual</h5>
+                                <p class="card-text">The perfect plan for just you. Get all the fresh fruit and vegetables</p>
+                                <a href="#" cl;ass="btn btn-success">Buy </a>
+                            </div>
+                            <div class="card-footer">
+                                <small class="text-muted"></small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
 
             </div>
