Add cards 2 and 3

--- a/index.html
+++ b/index.html
@@ -51,11 +51,37 @@
                 <div class="container pt-5"></div>
                 <div class="row">
                     <div class="col">
-                        <div class="card">
+                        <div class="card h-100 shadow">
                             <img src="img/indplan.png" class="card-img-top" alt="Individual plan">
                             <div class="card-body">
                                 <h5 class="card-title">Individual</h5>
                                 <p class="card-text">The perfect plan for just you. Get all the fresh fruit and vegetables</p>
+                                <a href="#" cl;ass="btn btn-success">Buy </a>
+                            </div>
+                            <div class="card-footer">
+                                <small class="text-muted"></small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 shadow">
+                            <img src="img/FamilyPlan.png" class="card-img-top" alt="Family plan">
+                            <div class="card-body">
+                                <h5 class="card-title">Family plan</h5>
+                                <p class="card-text">The freshest fruits and vegies to you and your family.</p>
+                                <a href="#" cl;ass="btn btn-success">Buy </a>
+                            </div>
+                            <div class="card-footer">
+                                <small class="text-muted"></small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 shadow">
+                            <img src="img/armyplan.png" class="card-img-top" alt="Army plan">
+                            <div class="card-body">
+                                <h5 class="card-title">Army plan</h5>
+                                <p class="card-text">Have a big family or a whole Army to feed, this is the plan for you.</p>
                                 <a href="#" cl;ass="btn btn-success">Buy </a>
                             </div>
                             <div class="card-footer">
